--- a/Calender/Assembly-CSharp.csproj
+++ b/Calender/Assembly-CSharp.csproj
@@ -63,6 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Calender\Scripts Calender\CalendarController.cs" />
+    <Compile Include="Assets\Calender\Scripts Calender\Checklist.cs" />
+    <Compile Include="Assets\Calender\Scripts Calender\ChecklistsController.cs" />
     <Compile Include="Assets\Calender\Scripts Calender\GameManager.cs" />
     <Compile Include="Assets\Calender\Scripts Calender\MonthPage.cs" />
     <Compile Include="Assets\Challenges\scriptc#\challenge.cs" />
